--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="https://1nlyr.github.io/bangcuan">Home <span class="sr-only">(current)</span></a>
                                 </li>
                             </ul>
                         </div>
